--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                     </div>
                     <div class="col-xl-9 col-9  text-right">
                         <!--===================== Header Block ========================-->
-                        <div class="header-block" style="text-align: right">
+                        <div class="" style="text-align: right">
                             <ul class="nav-menu list-unstyled list-inline">
-                                <li class="list-inline-item"   ><a href="">Call Us</a><br> <a href="tel:+971585606800" class="text-warning fw-bold mt-5 fs-5">+971585606800</a></li>
+                                <li><a href="">Call Us :</a> <a href="tel:+971585606800" class="fw-bold fs-6" style="color: #131149;">+971585606800</a></li>
                             </ul>
                         </div>
 					</button>
@@ -52,13 +52,24 @@
                 <div class="row px-sm-0 px-4">
                     <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                         <div class="" style="padding-top: 0px;max-width: 600px">
-                            <h1 class="fw-bold text-white pb-4" >Trademark Registration in Dubai</h1>
-                            <p class="text-white fs-6 fw-bold">Your brand is one of your most valuable assets, therefore keeping it safe from theft and infringement is essential. Therefore, we provide easy online trademark registration in Dubai, granting you ownership of your company's name, design, logo, and brand. We also provide trademark search assistance to help you determine whether two marks are comparable. Under a federal law that is applicable to all seven emirates of Dubai, the Ministry of Economy oversees trademark law in that city-state.</p>
+                            <h3 class="fw-bold text-white pb-4 text-capitalize" >register  trademark in dubai</h3>
+                            <p class="text-dark p-3 rounded-5 fs-6 fw-bold bg-light" style="box-shadow: #ffc107 -3px -1px 0px 4px;">Your brand is one of your most valuable assets, therefore keeping it safe from theft and infringement is essential. Therefore, we provide easy online trademark registration in Dubai, granting you ownership of your<strong class="bg-warning "> company's name, design, logo, and brand</strong>. We also provide trademark search assistance to help you determine whether two marks are comparable. Under a federal law that is applicable to all <strong class="bg-warning ">seven emirates of Dubai, the Ministry of Economy</strong> oversees trademark law in that city-state.</p>
 
-                            <ul class="text-white" style="line-height: 1.2em;">
+                            <!-- <ul class="text-white" style="line-height: 1.2em;">
+                               
                                 <li class="m-2">To register a trademark in Dubai at a low cost, submit your form right now.</li>
                                 <li class="m-2">Hire a Highly Qualified Trademark Attorney today to register your trademark!</li>
-                            </ul>
+                            </ul> -->
+                            <div class="d-flex justify-content-center my-3" style="line-height: 1.2em;">
+                                <div class="bg-white text-dark p-2 rounded-4">
+                                <strong><i class="strip_icon_color fa fa-hand-point-right"></i>
+                                    <span>To register a trademark in Dubai at a low cost, submit your form right now.</span></strong></div>
+                            </div>
+                            <div class="d-flex justify-content-center my-3 " style="line-height: 1.2em;">
+                                <div class="bg-white text-dark p-2 rounded-4">
+                                <strong><i class="strip_icon_color fa fa-hand-point-right"></i>
+                                    <span>Hire a Highly Qualified Trademark Attorney today to register your trademark!</span></strong></div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-6 col-12 mx-auto mt-md-0 mt-5 my-auto ">
@@ -90,6 +101,7 @@
                                     <input type="hidden" name="body" id="body" value="Check test">
                                     <input type="hidden" name="service_code" value="001" id="trademark-registration-dubai">
                                     <input type="hidden" name="title" value="trademark-registration-dubai">
+                                    <input type="hidden" name="redirect">
                                     <input type="hidden" name="analytics" id="analytics1" />
                                 </div>
                                 <div class="text-right">
@@ -109,7 +121,7 @@
 
     <div class="container my-5">
         <div class="justify-content-center text-center my-0 py-0">
-            <h2 class="h2-main">Process for registering a trademark</h2>
+            <h2 class="h2-main text-capitalize">Process for registering a trademark</h2>
             <div class="clearfix"></div>
 
             <p class="fw-bold">UAE trademark registration in 3 easy steps</p>
@@ -117,15 +129,15 @@
         <div class="row justify-content-center text-center mt-3 d-flex justify-content-evenly">
             <article class="col-md-3  py-2 rounded-2 mt-3 py-3" style="box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;">
                 <img src="https://abounaja.com/assets/img/registration/checklist.png" alt="" title="">
-                <p><strong>1. Fill out our questionnaire for trademark registration.</strong></p>
+                <p><strong class="text-capitalize">1. Fill out our questionnaire for trademark registration.</strong></p>
             </article>
             <article class="col-md-3  py-2 rounded-2 mt-3 py-3" style="box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;">
                 <img src="https://abounaja.com/assets/img/registration/search-doc.png" alt="" title="">
-                <p><strong>2.<strong>Completing the Trademark Form</strong>:Experienced attorneys will handle all of your paperwork, agreements, and registrations.</strong></p>
+                <p><strong class="text-capitalize">2.<strong>Completing the Trademark Form</strong>:Experienced attorneys will handle all of your paperwork, agreements, and registrations.</strong></p>
             </article>
             <article class="col-md-3  py-2 rounded-2 mt-3 py-3 " style="box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;" >
                 <img src="https://abounaja.com/assets/img/registration/mail-doc.png" alt="" title="">
-                <p><strong>3.<strong>Register a Trademark</strong>: We will give you a  trademark registration certificate</strong></p>
+                <p><strong  class="text-capitalize">3.<strong>Register a Trademark</strong>: We will give you a  trademark registration certificate</strong></p>
             </article>
         </div>
     </div>
@@ -133,7 +145,7 @@
     <div class="container">
         <div class="text-head text-center">
             <h5 class="fw-bold fs-3">FAQ</h5>
-            <h2 class="h2-main">Questions you often ask</h2>
+            <h2 class="h2-main text-capitalize">Questions you often ask</h2>
         </div>
         <!--===================== Accordion ========================-->
         <div id="accordion" class="animatedParent">
@@ -320,6 +332,7 @@
                             <input type="hidden" name="body" id="body" value="Check test">
                             <input type="hidden" name="service-code" id="service-code" value="001" id="trademark-registration-dubai">
                             <input type="hidden" name="title" value="trademark-registration-dubai">
+                            <input type="hidden" name="redirect">
                             <input type="hidden" name="analytics" id="analytics2" />
                             
                             <div class="col-12">
