--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
                                 <li class="m-2">To register a trademark in Dubai at a low cost, submit your form right now.</li>
                                 <li class="m-2">Hire a Highly Qualified Trademark Attorney today to register your trademark!</li>
                             </ul> -->
-                            <div class="d-flex justify-content-center my-3" style="line-height: 1.2em;">
+                            <div class="d-flex px-2 my-3" style="line-height: 1.2em;">
                                 <div class="bg-white text-dark p-2 rounded-4">
                                 <strong><i class="strip_icon_color fa fa-hand-point-right"></i>
-                                    <span>To register a trademark in Dubai at a low cost, submit your form right now.</span></strong></div>
+                                    <span>To register a trademark in Dubai at a low cost, submit form now.</span></strong></div>
                             </div>
-                            <div class="d-flex justify-content-center my-3 " style="line-height: 1.2em;">
+                            <div class="d-flex px-2 my-3 " style="line-height: 1.2em;">
                                 <div class="bg-white text-dark p-2 rounded-4">
                                 <strong><i class="strip_icon_color fa fa-hand-point-right"></i>
-                                    <span>Hire a Highly Qualified Trademark Attorney today to register your trademark!</span></strong></div>
+                                    <span>Highly Qualified Trademark Attorney to register your trademark!</span></strong></div>
                             </div>
                         </div>
                     </div>
