Update in service

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <div class="d-flex px-2 my-3" style="line-height: 1.2em;">
                                 <div class="bg-white text-dark p-2 rounded-4">
                                 <strong><i class="strip_icon_color fa fa-hand-point-right"></i>
-                                    <span>To register a trademark in Dubai at a low cost, submit form now.</span></strong></div>
+                                    <span>To register a trademark in Dubai at a low cost,submit form now.</span></strong></div>
                             </div>
                             <div class="d-flex px-2 my-3 " style="line-height: 1.2em;">
                                 <div class="bg-white text-dark p-2 rounded-4">
@@ -74,7 +74,10 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-6 col-12 mx-auto mt-md-0 mt-5 my-auto ">
                         <div class="form-box bg-white py-5 h-100 w-75 mx-auto">
-                            <h4 class="fw-bold text-center mb-4 fs-3 ">Register Now !</h4>                            
+                            <center>
+                                <h4 class="fw-bold text-center fs-3 ">Register Now !</h4>
+                                <hr class="bg-dark border border-2 border-dark rounded-4" style="height:2px;max-width:180px;opacity:1;"> 
+                            </center>                          
                             <form action="custom_form.php" onsubmit="emailPassage()" method="POST"  id="enquiryform" class="px-4">
                                 <div class="col-12 pb-4 ">
                                     <input class="form-control border  border-bottom border-secondary bg-light"
@@ -420,13 +423,6 @@
     <script>
         document.getElementById("analytics1").value = window.location.href;
         document.getElementById("analytics2").value = window.location.href;
-    
-       window.setTimeout(function () {
-       (function(w,d,u){
-               var s=d.createElement('script');s.async=true;s.src=u+'?'+(Date.now()/60000|0);
-               var h=d.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);
-       })(window,document,'https://cdn.bitrix24.com/b1650591/crm/site_button/loader_73_h02pkr.js')},7000);
-      
    </script>
 
 
